# $Id$

2006-10-04
	* Fix buffer overflow in parsing LC_ALL, LC_CTYPE and LANG
	environment variables and fix crash for users with locale
	name longer than 10 chars (repored by Michael Schwendt)

2006-09-30
	* --enable-debug added.
	* prevent libtool from adding its default CFLAGS

2006-09-28
	* Use pkg-config instead of xft-config.
	* Fix last line bug which had required padding text with extra blank line 
	to see text on last line.

2006-09-01
	* Fix type-punning and "differ in signedness" warnings seen with
	gcc-4.1 -O2.

2006-08-27
	* Fix compilation errors when building with --diable-x11; bug #1547164

2006-08-12
	* Make configure script print summary info
	* Make `conky -v` show compiled-in features

2006-08-10
	* Added Spock's patches, adding hddtemp, goto and tab variables.

2006-07-13
	* Added tztime patch to show time in arbitrary time zones (thanks Ram
	Yalamanchili)

2006-06-07
	* Small battery fix (thanks Nexox, sf.net patch 1500014)
	* Fixed order of variables/objects in docs (thanks Peter Tarjan)

2006-05-27
	* Fixed a bug with $font

2006-05-24
	* Xdamage support for composite and pals

2006-05-23
	* CPU voltage support via $voltage_mv and $voltage_v (thanks to Peter
	Tarjan for the patch)

2006-05-21
	* SMP support for $freq and $freq_g (thanks to Peter Tarjan for the
	patch)

2006-05-17
	* Fixed issue with graphs not reaching all the way to the borders
	(sf.net bug 1470480)
	* Cleaned up units

2006-05-15
	* Conky 1.4.2 released

2006-05-13
	* GNU Iconv support added, new objects $iconv_start and $iconv_stop
	* Added some safety to the threading code

2006-05-09
	* Changed $font behavior so that the font persists past the next
	newline.  It can be set back to the default with $font with no args.
	(closes bug 1478676 on sf.net)

2006-05-08
	* Added simple POP3/IMAP mail clients

2006-04-23
	* Added support for PowerBook batteries
	* Fixed broken $if/$else stuff

2006-04-15
	* Added patch from Peter Tarjan to add support for IBM ACPI